--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <style>
+      * {
+        margin: 0;
+        font-family: 'Poppins', sans-serif;
+      }
+    </style>
     <title>React App</title>
   </head>
   <body>
